readme md e alguns testes
